fix mobile visibilty

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 	position: fixed;
 }
 
-#nav-bar, #nav-bar-nojs {
+#nav-bar {
 	position: absolute;
 	transition: 0.25s;
     top: 0px;
@@ -32,31 +32,31 @@
     z-index: 999;
 }
 
-#nav-bar ul, #nav-bar-nojs ul {
+#nav-bar ul {
     display: contents;
     list-style: none;
     margin: 0;
     padding: 0;
 }
 
-#nav-bar li, #nav-bar-nojs li {
+#nav-bar li {
 	font-weight: bolder;
 	font-variant-caps: all-petite-caps;
     margin: 0px 1vw 0px;
 }
 
-#nav-bar img, #nav-bar-nojs img {
+#nav-bar img {
     height: auto;
     max-width: 50px;
     filter: invert(100%);
 }
 
-#nav-bar a, #nav-bar-nojs a{
+#nav-bar a {
 	text-decoration: none;
 	color: whitesmoke;
 }
 
-#nav-bar div, #nav-bar-nojs div{
+#nav-bar div{
 	display: flex;
 }
 
@@ -280,7 +280,7 @@ button:active{
 	margin: 30px 0 20px 0px;
 }
 
-.recc button, .course-buttons-nojs{
+.recc button{
 	margin: auto;
 	padding: 0.5em 1em 0.5em;
 
@@ -544,7 +544,7 @@ pre::-webkit-scrollbar-track{
 }
 
 /* FOR MOBILE DEVICES */
-@media screen and (orientation: portrait) and (max-width: 1080px){
+/*@media screen and (orientation: portrait) and (max-width: 1080px){
 	#heading{
 		margin-left: 10%;
 		margin-right: 10%;
@@ -669,3 +669,4 @@ pre::-webkit-scrollbar-track{
 		width: 80%;
 	}
 }
+*/
